# 4D-gp-data-analyser

./: .gitignore  CMakeLists.txt  GPanalyser.cpp  GPanalyser.h  README.md  vcpkg.json
src/: Camera.cpp  Camera.h  Grid.cpp  Grid.h  Renderer.cpp  Renderer.h
src/shaders/: mainShader.frag  mainShader.vert
